# stagio

./: CMakeLists.txt  GUI_pt_PT.ts  MONITOR.qml  Main.qml  booting.qml  bypass.qml  dbmanager.cpp  dbmanager.h  grafic.qml  includes.h  languages.qml  main.cpp  metric.qml  mytranslator.cpp  mytranslator.h  output.qml  pcan.cpp  pcan.h  settings.qml  standby.qml  temperature.qml  timer.cpp  timer.h  useractivitydetector.cpp
DB/: teste.db
GUI/: CMakeLists.txt  MONITOR.qml  Main.qml  booting.qml  bypass.qml  dbmanager.cpp  dbmanager.h  grafic.qml  includes.h  languages.qml  main.cpp  metric.qml  output.qml  pcan.cpp  pt_PT.ts  settings.qml  standby.qml  temperature.qml  timer.cpp  timer.h  useractivitydetector.cpp  useractivitydetector.h
GUI/DB/: teste.db  teste.sqbpro
GUI/translations/: pt_PT.ts
